# antaris-context

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  benchmark_results.json  pyproject.toml
antaris_context/: __init__.py  compressor.py  importance.py  manager.py  profiler.py  strategy.py  utils.py  window.py
benchmarks/: bench_context.py
tests/: test_compression.py  test_context.py
